<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/content_main"
    android:background="@color/black"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_gravity="center"

        android:textColor="@color/white"
        android:text="@string/updated_5_45pm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_320sdp"
        android:divider="@color/black"
        android:dividerHeight="@dimen/_7sdp"
        android:listSelector="@drawable/listselector"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="VisualLintBounds" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="4dp"
        android:background="#292929"
        app:alignmentMode="alignMargins"
        app:columnCount="4"
        app:columnOrderPreserved="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView"
        tools:ignore="VisualLintBounds">


        <android.widget.Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/special_button"
            android:text="@string/c"
            android:textColor="@color/cancelBtn"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button
            android:id="@+id/button7"

            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/button7"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button
            android:id="@+id/button8"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/button8"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button
            android:id="@+id/button9"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button
            android:id="@+id/btn_ref"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/special_button"
            android:drawableStart="@drawable/refresh"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:contentDescription="@string/refresh_button"
            android:textSize="@dimen/_20sdp"
            />

        <android.widget.Button
            android:id="@+id/button4"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button
            android:id="@+id/button5"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button
            android:id="@+id/button6"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />


        <android.widget.Button
            android:id="@+id/button1"
            android:layout_width="@dimen/_65sdp"

            app:layout_column="1"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            />

        <android.widget.Button
            android:id="@+id/button2"

            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />


        <android.widget.Button
            android:id="@+id/button3"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button

            android:id="@+id/btn_equal"

            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/special_button"
            android:text="@string/n"
            android:textColor="@color/plusBtn"
            android:textSize="@dimen/_25sdp"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_rowSpan="2"


            />

        <android.widget.Button
            android:id="@+id/button0"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/_0"
            android:textColor="@color/white"
            app:layout_column="1"
            app:layout_row="3"
            android:textSize="@dimen/_20sdp" />
        <android.widget.Button
            android:id="@+id/btn_dot"
            android:layout_width="@dimen/_65sdp"

            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:text="@string/dotBtn"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <android.widget.Button
            android:id="@+id/btn_back"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/custombutton"
            android:drawableStart="@drawable/back_icon"
            android:paddingStart="@dimen/_20sdp"
            android:contentDescription="@string/cancel_button"
            android:paddingEnd="@dimen/_20sdp"
            android:textSize="@dimen/_20sdp"
            />
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>